opam-version : "2.0"
version      : "1.0"
maintainer   : "rinderknecht@free.fr"
authors      : [ "Christian Rinderknecht" ]
homepage     : "https://github.com/rinderknecht/UnionFind"
bug-reports  : "https://github.com/rinderknecht/UnionFind/issues"
dev-repo     : "git+https://github.com/rinderknecht/UnionFind.git"
license      : "MIT"
synopsis     : "A polymorphic implementation of the Union-Find data structure in OCaml"
depends      : [ "dune" ]

build        : [
                [ "sh" "-c" "printf 'let version = \"%s\"' \"$(git describe --always --dirty --abbrev=0)\" > Version.ml" ]
                [ "dune" "build" "-p" name "-j" jobs ]
               ]

url {
  src: "https://github.com/rinderknecht/UnionFind/-/archive/master/UnionFind.tar.gz"
}
