opam-version : "2.0"
name         : "UnionFind"
version      : "1.0"
synopsis     : "A polymorphic implementation of the Union-Find data structure in OCaml"
description  : "Four implementations of the Union-Find algorithms are proposed: a naive one featuring an asymptotic worst case cost of O(n^2); a persistent one with height-balanced forests and without path compression, featuring an asymptotic worst case cost of O(n*log(n)); an alternate implementation of the previous one with a different data type; a destructive implementation with height-balanced forests but without path compression, featuring an asymptotic worst case of O(n*log(n))."
authors      : ["Christian Rinderknecht"]
maintainer   : "rinderknecht@free.fr"
homepage     : "https://github.com/rinderknecht/UnionFind"
bug-reports  : "https://github.com/rinderknecht/UnionFind/issues"
dev-repo     : "git+https://github.com/rinderknecht/UnionFind.git"
license      : "MIT"
depends      : ["dune"]
build        : [[ "dune" "build" "-p" name]]

url {
  src: "https://github.com/rinderknecht/UnionFind/-/archive/master/UnionFind.tar.gz"
}
